--- a/src/css/index.css
+++ b/src/css/index.css
@@ -42,17 +42,18 @@ main::after{
 
 .conteudo .nome-personagem{
     color: #FFF;
-    font-size: 40px;
-    font-family: "Secular One";
+    font-size: 60px;
     font-weight: 400;
     margin-bottom: 20px;
+    font-family: 'Pirata One', cursive;
 }
 
 .conteudo .descricao{
     color: #fff;
-    font-family: "Rubik";
-    font-size: 20px;
+    font-family: 'Pirata One', cursive;
+    font-size: 25px;
     line-height: 24px;
+    color: rgba(255, 162, 0, 0.853);
 }
 
 .conteudo .logo{
@@ -67,7 +68,7 @@ main::after{
     top: 0;
     right: 0;
     height: 100vh;
-    width: 180px;
+    width:180px;
     display: flex;
     justify-content: center;
     align-items: center;
