--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -22,8 +22,8 @@
     }
     
     .conteudo  .logo{
-        height: 180px;
-        width: 370px;
+        height: 150px;
+        width: 300px;
     }
     .conteudo .descricao{
         max-width: 500px;
@@ -59,10 +59,24 @@
 
     .botoes{
         padding: 20px;
-        top: -20%;
+        top: -10%;
+        gap: 5px;
     }
 
     .botoes .botao{
-        max-width: 50px;
+        max-width: 100px ;
+    }
+    .botao{
+        border-radius: 80%;
+    }
+
+    .botao img{
+        border-radius: 80%; 
+    }
+    .botao.selecionado{
+        transform: scale(1.2);
+        box-shadow: 0 0  10px #D9D9D9
+        
+        
     }
 }
